--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   },
   "homepage": "https://github.com/christophehurpeau/deep-freeze-es6#readme",
   "devDependencies": {
-    "typescript": "^2.9.2"
+    "typescript": "4.0.5"
   }
 }
